2004-04-09  John C Barstow  <jbowtie@amathaine.com>

        * configure.in: Added "mi" (Maori) to ALL_LINGUAS.

Fri Apr 16 16:02:53 2004  George Lebl <jirka@5z.com>

	* docs/C/gdm.xml: update version information, no changes.  Damnit
	  I should have done this before the release.

Fri Apr 16 16:00:50 2004  George Lebl <jirka@5z.com>

	* Release 2.6.0.1

Fri Apr 16 15:08:25 2004  George Lebl <jirka@5z.com>

	* daemon/auth.c: ensure clean building even if FamilyInternetV6
	  is not define (define it ourselves to '6' which is what it is)

	* configure.in: raise version

	* NEWS: update

Tue Apr 13 11:22:00 2004  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: stop calling 'gdm' 'genius', I'm confusing
	  my projects :)

2004-04-09  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.

2004-04-08 Vijaykumar Patwari <vijaykumar.patwari@wipro.com>

	* daemon/auth.c (get_local_auths): Replaced Address Family, 
	FamilyInternet by FamilyInternetV6 for IPv6 while adding addresses 
	for authorization. Fixes "Remote login with IPv6 enabled".

Sun Apr 04 11:12:55 2004  George Lebl <jirka@5z.com>

	* daemon/misc.c, daemon/slave.c, daemon/display.c, daemon/gdm.c:
	  The ensure_sanity is now always called only from the main daemon
	  on display_manage (to avoid stepping on ones toes) and also it
	  checks /tmp/.X11-unix to have correct permissions as well.

Tue Mar 30 15:47:33 2004  George Lebl <jirka@5z.com>

	Fixes from: Jerry Wall <Jerry.Wall@Sun.COM>

	* daemon/display.c: in whack_old_slave, make sure to close
	  any stale pipes/sockets just in case

	* daemon/gdm.c: ignore SIGPIPE, it is possible that the slave
	  dies in a bad moment and we get a SIGPIPE

2004-03-31  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "af" to ALL_LINGUAS.

2004-03-23  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "mr" for Marathi in ALL_LINGUAS.
